# zest

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  color-fish.sh  colors.sh  example1.txt  gradients.sh  logo.txt
.github/workflows/: ci.yml  release.yml
src/: main.rs  shell.rs  style.rs
src/anim/: flames.rs  green_flash.rs  lightning.rs  matrix.rs  mod.rs  neon.rs  scan.rs  shine.rs  sprout.rs
tests/: integration.rs
